// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SheetList.Item /> should render with a link 1`] = `
<ForwardRef(WithForwardedRef(Item))
  link="url/to/somewhere"
  title="My Title"
>
  <Item
    className={null}
    description={null}
    forwardedRef={null}
    image={null}
    isDisabled={false}
    isSelected={false}
    leftComponent={null}
    link="url/to/somewhere"
    linkComponent={[Function]}
    linkState={null}
    onClick={null}
    rightComponent={null}
    testId={null}
    title="My Title"
  >
    <ForwardRef(WithForwardedRef(Glow))
      className={null}
      styles={
        {
          "hover": {
            "boxShadow": "-20px 0 0 #f7f7f7, 20px 0 0 #f7f7f7",
          },
        }
      }
    >
      <Glow
        className={null}
        color="#f7f7f7"
        disabled={false}
        forwardedRef={null}
        styles={
          {
            "hover": {
              "boxShadow": "-20px 0 0 #f7f7f7, 20px 0 0 #f7f7f7",
            },
          }
        }
      >
        <div
          className="sg-p4e9kp-container ui-shared__glow"
          onClick={[Function]}
        >
          <div
            className="sg-f2xef3-glow"
            style={{}}
          />
          <Link
            href="url/to/somewhere"
            onClick={null}
            state={null}
            tabIndex={0}
          >
            <div />
          </Link>
        </div>
      </Glow>
    </ForwardRef(WithForwardedRef(Glow))>
  </Item>
</ForwardRef(WithForwardedRef(Item))>
`;

exports[`<SheetList.Item /> should render with a right component 1`] = `
<ForwardRef(WithForwardedRef(Item))
  rightComponent={
    <span>
      I\`m a span.
    </span>
  }
  title="My Title"
>
  <Item
    className={null}
    description={null}
    forwardedRef={null}
    image={null}
    isDisabled={false}
    isSelected={false}
    leftComponent={null}
    link={null}
    linkComponent={[Function]}
    linkState={null}
    onClick={null}
    rightComponent={
      <span>
        I\`m a span.
      </span>
    }
    testId={null}
    title="My Title"
  >
    <div
      className="engage__sheet-list__item"
      data-test-id={null}
    >
      <Grid
        className="sg-oxesat-grid"
        component="div"
        wrap={false}
      >
        <div
          className="common__grid sg-1m2nk0b-root-noWrap-grid"
        >
          <GridItem
            className="sg-h6motv-title"
            component="div"
            grow={1}
            shrink={1}
          >
            <div
              className="sg-427d4o-root-title"
            >
              <div>
                My Title
              </div>
            </div>
          </GridItem>
          <GridItem
            className=""
            component="div"
            grow={1}
            shrink={1}
          >
            <div
              className="sg-xljr6b-root"
            >
              <span>
                I\`m a span.
              </span>
            </div>
          </GridItem>
        </div>
      </Grid>
    </div>
  </Item>
</ForwardRef(WithForwardedRef(Item))>
`;

exports[`<SheetList.Item /> should render with a title but no image 1`] = `
<ForwardRef(WithForwardedRef(Item))
  title="My Title"
>
  <Item
    className={null}
    description={null}
    forwardedRef={null}
    image={null}
    isDisabled={false}
    isSelected={false}
    leftComponent={null}
    link={null}
    linkComponent={[Function]}
    linkState={null}
    onClick={null}
    rightComponent={null}
    testId={null}
    title="My Title"
  >
    <div
      className="engage__sheet-list__item"
      data-test-id={null}
    >
      <Grid
        className="sg-oxesat-grid"
        component="div"
        wrap={false}
      >
        <div
          className="common__grid sg-1m2nk0b-root-noWrap-grid"
        >
          <GridItem
            className="sg-h6motv-title"
            component="div"
            grow={1}
            shrink={1}
          >
            <div
              className="sg-427d4o-root-title"
            >
              <div>
                My Title
              </div>
            </div>
          </GridItem>
        </div>
      </Grid>
    </div>
  </Item>
</ForwardRef(WithForwardedRef(Item))>
`;

exports[`<SheetList.Item /> should render with an image 1`] = `
<ForwardRef(WithForwardedRef(Item))
  image={
    <img
      alt="Alternative text"
      src="url/to/image"
    />
  }
  title="My Title"
>
  <Item
    className={null}
    description={null}
    forwardedRef={null}
    image={
      <img
        alt="Alternative text"
        src="url/to/image"
      />
    }
    isDisabled={false}
    isSelected={false}
    leftComponent={null}
    link={null}
    linkComponent={[Function]}
    linkState={null}
    onClick={null}
    rightComponent={null}
    testId={null}
    title="My Title"
  >
    <div
      className="engage__sheet-list__item"
      data-test-id={null}
    >
      <Grid
        className="sg-oxesat-grid"
        component="div"
        wrap={false}
      >
        <div
          className="common__grid sg-1m2nk0b-root-noWrap-grid"
        >
          <div
            className="sg-o97c3u-image"
          >
            <img
              alt="Alternative text"
              src="url/to/image"
            />
          </div>
          <GridItem
            className="sg-h6motv-title"
            component="div"
            grow={1}
            shrink={1}
          >
            <div
              className="sg-427d4o-root-title"
            >
              <div>
                My Title
              </div>
            </div>
          </GridItem>
        </div>
      </Grid>
    </div>
  </Item>
</ForwardRef(WithForwardedRef(Item))>
`;

exports[`<SheetList.Item /> should render with an onClick element 1`] = `
<ForwardRef(WithForwardedRef(Item))
  onClick={[Function]}
  title="My Title"
>
  <Item
    className={null}
    description={null}
    forwardedRef={null}
    image={null}
    isDisabled={false}
    isSelected={false}
    leftComponent={null}
    link={null}
    linkComponent={[Function]}
    linkState={null}
    onClick={[Function]}
    rightComponent={null}
    testId={null}
    title="My Title"
  >
    <div
      aria-selected={false}
      data-test-id={null}
      onClick={[Function]}
      onKeyPress={[Function]}
      role="option"
      tabIndex={0}
    >
      <ForwardRef(WithForwardedRef(Glow))
        className={null}
        styles={
          {
            "hover": {
              "boxShadow": "-20px 0 0 #f7f7f7, 20px 0 0 #f7f7f7",
            },
          }
        }
      >
        <Glow
          className={null}
          color="#f7f7f7"
          disabled={false}
          forwardedRef={null}
          styles={
            {
              "hover": {
                "boxShadow": "-20px 0 0 #f7f7f7, 20px 0 0 #f7f7f7",
              },
            }
          }
        >
          <div
            className="sg-p4e9kp-container ui-shared__glow"
            onClick={[Function]}
          >
            <div
              className="sg-f2xef3-glow"
              style={{}}
            />
            <div
              className="engage__sheet-list__item"
              data-test-id={null}
            >
              <Grid
                className="sg-oxesat-grid"
                component="div"
                wrap={false}
              >
                <div
                  className="common__grid sg-1m2nk0b-root-noWrap-grid"
                >
                  <GridItem
                    className="sg-h6motv-title"
                    component="div"
                    grow={1}
                    shrink={1}
                  >
                    <div
                      className="sg-427d4o-root-title"
                    >
                      <div>
                        My Title
                      </div>
                    </div>
                  </GridItem>
                </div>
              </Grid>
            </div>
          </div>
        </Glow>
      </ForwardRef(WithForwardedRef(Glow))>
    </div>
  </Item>
</ForwardRef(WithForwardedRef(Item))>
`;

exports[`<SheetList.Item /> should render without a Glow when disabled 1`] = `
<ForwardRef(WithForwardedRef(Item))
  isDisabled={true}
  title="My Title"
>
  <Item
    className={null}
    description={null}
    forwardedRef={null}
    image={null}
    isDisabled={true}
    isSelected={false}
    leftComponent={null}
    link={null}
    linkComponent={[Function]}
    linkState={null}
    onClick={null}
    rightComponent={null}
    testId={null}
    title="My Title"
  >
    <div
      className="engage__sheet-list__item"
      data-test-id={null}
    >
      <Grid
        className="sg-oxesat-grid"
        component="div"
        wrap={false}
      >
        <div
          className="common__grid sg-1m2nk0b-root-noWrap-grid"
        >
          <GridItem
            className="sg-1hibuk7-title-disabled"
            component="div"
            grow={1}
            shrink={1}
          >
            <div
              className="sg-1n1osdl-root-title-disabled"
            >
              <div>
                My Title
              </div>
            </div>
          </GridItem>
        </div>
      </Grid>
    </div>
  </Item>
</ForwardRef(WithForwardedRef(Item))>
`;

exports[`<SheetList.Item /> should render without a Glow when selected 1`] = `
<ForwardRef(WithForwardedRef(Item))
  isSelected={true}
  title="My Title"
>
  <Item
    className={null}
    description={null}
    forwardedRef={null}
    image={null}
    isDisabled={false}
    isSelected={true}
    leftComponent={null}
    link={null}
    linkComponent={[Function]}
    linkState={null}
    onClick={null}
    rightComponent={null}
    testId={null}
    title="My Title"
  >
    <div
      className="engage__sheet-list__item"
      data-test-id={null}
    >
      <Grid
        className="sg-1n7wr56-grid-selected"
        component="div"
        wrap={false}
      >
        <div
          className="common__grid sg-6eunye-root-noWrap-grid-selected"
        >
          <GridItem
            className="sg-h6motv-title"
            component="div"
            grow={1}
            shrink={1}
          >
            <div
              className="sg-427d4o-root-title"
            >
              <div>
                My Title
              </div>
            </div>
          </GridItem>
        </div>
      </Grid>
    </div>
  </Item>
</ForwardRef(WithForwardedRef(Item))>
`;
